changed the rightest input to button ADD PLACE

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
                 </div>
                 <div class="col-1 price">
                     <p>Размер стипендии:</p>
-                    <input type="text" value="2000"/>
+                    <input type="text" placeholder="2000"/>
                     <p class="ruble-sign">&#8399;</p>
                 </div>
                 <div class="col-1 add-place">
-                    <input type="text" value="Добавить место"/>
+                    <!--<input type="text" placeholder="Добавить место"/>-->
+                    <button>Добавить место</button>
                 </div>
         </div>
         <div class="right-space"></div>
